Fixed overflow

--- a/dev/styletile/mystyle.css
+++ b/dev/styletile/mystyle.css
@@ -34,8 +34,7 @@ body {
    font-family: "Lato", sans-serif;
    font-weight: 300;
    font-style: normal;
-   margin: 3em;
-   width: 100%;
+   padding: 2em;
 }
 
 a {
@@ -77,6 +76,7 @@ a:hover {
   height: 70px;
   float: left;
   margin-right: .5em;
+  margin-top: .5em;
 }
 
 .red {
@@ -85,6 +85,7 @@ a:hover {
   height: 70px;
   float: left;
   margin-right: .5em;
+  margin-top: .5em;
 }
 
 .blue {
@@ -93,6 +94,7 @@ a:hover {
   height: 70px;
   float: left;
   margin-right: .5em;
+  margin-top: .5em;
 }
 
 .green {
@@ -101,6 +103,7 @@ a:hover {
   height: 70px;
   float: left;
   margin-right: .5em;
+  margin-top: .5em;
 }
 
 .redbutton {
@@ -153,4 +156,8 @@ a:hover {
 
 .button {
   text-decoration: none;
+}
+
+{
+  box-sizing: border-box;
 }
